--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,6 @@ docker = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["mcpx"]
